test/fail/invalid_types4.min
program
    function void hello do return 123
start
end
